--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build-and-scan:
     runs-on: ubuntu-latest
     services:
       mongo:
@@ -27,32 +27,77 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Set up Node.js for frontend and backend
+      # 2️⃣ Set up Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
 
-      # 3️⃣ Build backend Docker image
+      # 3️⃣ SonarQube Scan
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=daybook
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+      # 4️⃣ Build backend Docker image
       - name: Build backend image
         run: |
           docker build -t daybook-backend ./backend
 
-      # 4️⃣ Build frontend Docker image
+      # 5️⃣ Build frontend Docker image
       - name: Build frontend image
         run: |
           docker build -t daybook-frontend ./frontend
 
-      # 6️⃣ Push images to Docker Hub (optional)
-      # Make sure to add DOCKER_USERNAME and DOCKER_PASSWORD as GitHub secrets
+      # 6️⃣ Trivy Scan (backend)
+      - name: Trivy Scan Backend
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: image
+          image-ref: daybook-backend
+          severity: HIGH,CRITICAL
+          format: 'table'
+          output: trivy-backend-report.txt
+
+      # 7️⃣ Trivy Scan (frontend)
+      - name: Trivy Scan Frontend
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: image
+          image-ref: daybook-frontend
+          severity: HIGH,CRITICAL
+          format: 'table'
+          output: trivy-frontend-report.txt
+
+      # 8️⃣ Upload Trivy Reports to Nexus (log management)
+      - name: Upload reports to Nexus
+        run: |
+          curl -u ${{ secrets.NEXUS_USERNAME }}:${{ secrets.NEXUS_PASSWORD }} \
+          --upload-file trivy-backend-report.txt \
+          ${{ secrets.NEXUS_URL }}/repository/daybook-logs/trivy-backend-report.txt
+
+          curl -u ${{ secrets.NEXUS_USERNAME }}:${{ secrets.NEXUS_PASSWORD }} \
+          --upload-file trivy-frontend-report.txt \
+          ${{ secrets.NEXUS_URL }}/repository/daybook-logs/trivy-frontend-report.txt
+
+      # 9️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 🔟 Push backend image
       - name: Push backend image
-        run: docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest && docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
+        run: |
+          docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
+      # 1️⃣1️⃣ Push frontend image
       - name: Push frontend image
-        run: docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest && docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
+        run: |
+          docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
