--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,19 +42,29 @@ jobs:
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      # 4️⃣ Build backend Docker image
+      # 4️⃣ Pre-build Trivy scan (filesystem + dependencies)
+      - name: Trivy FS Scan
+        uses: aquasecurity/trivy-action@0.18.0
+        with:
+          scan-type: fs
+          scan-ref: .
+          severity: HIGH,CRITICAL
+          format: 'table'
+          output: trivy-fs-report.txt
+
+      # 5️⃣ Build backend Docker image
       - name: Build backend image
         run: |
           docker build -t daybook-backend ./backend
 
-      # 5️⃣ Build frontend Docker image
+      # 6️⃣ Build frontend Docker image
       - name: Build frontend image
         run: |
           docker build -t daybook-frontend ./frontend
 
-      # 6️⃣ Trivy Scan (backend)
+      # 7️⃣ Trivy Scan (backend image)
       - name: Trivy Scan Backend
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
           image-ref: daybook-backend
@@ -62,9 +72,9 @@ jobs:
           format: 'table'
           output: trivy-backend-report.txt
 
-      # 7️⃣ Trivy Scan (frontend)
+      # 8️⃣ Trivy Scan (frontend image)
       - name: Trivy Scan Frontend
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
           image-ref: daybook-frontend
@@ -72,31 +82,30 @@ jobs:
           format: 'table'
           output: trivy-frontend-report.txt
 
-      # 8️⃣ Upload Trivy Reports to Nexus (log management)
-      - name: Upload reports to Nexus
-        run: |
-          curl -u ${{ secrets.NEXUS_USERNAME }}:${{ secrets.NEXUS_PASSWORD }} \
-          --upload-file trivy-backend-report.txt \
-          ${{ secrets.NEXUS_URL }}/repository/daybook-logs/trivy-backend-report.txt
+      # 9️⃣ Upload reports as GitHub artifacts
+      - name: Upload Trivy Reports as Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-reports
+          path: |
+            trivy-fs-report.txt
+            trivy-backend-report.txt
+            trivy-frontend-report.txt
 
-          curl -u ${{ secrets.NEXUS_USERNAME }}:${{ secrets.NEXUS_PASSWORD }} \
-          --upload-file trivy-frontend-report.txt \
-          ${{ secrets.NEXUS_URL }}/repository/daybook-logs/trivy-frontend-report.txt
-
-      # 9️⃣ Log in to Docker Hub
+      # 🔟 Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 🔟 Push backend image
+      # 1️⃣1️⃣ Push backend image
       - name: Push backend image
         run: |
           docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
-      # 1️⃣1️⃣ Push frontend image
+      # 1️⃣2️⃣ Push frontend image
       - name: Push frontend image
         run: |
           docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
