--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'" 
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -25,24 +25,30 @@ jobs:
     steps:
       # 1️⃣ Checkout repo
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # 2️⃣ Set up Node.js
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
-      # 3️⃣ SonarQube Scan
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@v2
-        with:
-          args: >
-            -Dsonar.projectKey=daybook
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
+        run: npm install
 
-      # 4️⃣ Pre-build Trivy scan (filesystem + dependencies)
+      # 4️⃣ Run tests (optional, if you have tests)
+      # - name: Run tests
+       # run: npm test --if-present
+
+      # 5️⃣ SonarCloud Scan
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # needed for PR decoration
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # 6️⃣ Pre-build Trivy scan (filesystem + dependencies)
       - name: Trivy FS Scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -52,17 +58,15 @@ jobs:
           format: 'table'
           output: trivy-fs-report.txt
 
-      # 5️⃣ Build backend Docker image
+      # 7️⃣ Build backend Docker image
       - name: Build backend image
-        run: |
-          docker build -t daybook-backend ./backend
+        run: docker build -t daybook-backend ./backend
 
-      # 6️⃣ Build frontend Docker image
+      # 8️⃣ Build frontend Docker image
       - name: Build frontend image
-        run: |
-          docker build -t daybook-frontend ./frontend
+        run: docker build -t daybook-frontend ./frontend
 
-      # 7️⃣ Trivy Scan (backend image)
+      # 9️⃣ Trivy Scan (backend image)
       - name: Trivy Scan Backend
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -72,7 +76,7 @@ jobs:
           format: 'table'
           output: trivy-backend-report.txt
 
-      # 8️⃣ Trivy Scan (frontend image)
+      # 🔟 Trivy Scan (frontend image)
       - name: Trivy Scan Frontend
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -82,7 +86,7 @@ jobs:
           format: 'table'
           output: trivy-frontend-report.txt
 
-      # 9️⃣ Upload reports as GitHub artifacts
+      # 1️⃣1️⃣ Upload Trivy Reports as Artifacts
       - name: Upload Trivy Reports as Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -92,20 +96,20 @@ jobs:
             trivy-backend-report.txt
             trivy-frontend-report.txt
 
-      # 🔟 Log in to Docker Hub
+      # 1️⃣2️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 1️⃣1️⃣ Push backend image
+      # 1️⃣3️⃣ Push backend image
       - name: Push backend image
         run: |
           docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
-      # 1️⃣2️⃣ Push frontend image
+      # 1️⃣4️⃣ Push frontend image
       - name: Push frontend image
         run: |
           docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
