--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -2,15 +2,18 @@ name: CI/CD Daybook Project
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
+
+permissions:
+  contents: read
+  security-events: write  # needed to upload SARIF to Security tab
 
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
+
     services:
       mongo:
         image: mongo
@@ -23,9 +26,11 @@ jobs:
           --health-retries 5
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repo (full history improves Sonar PR analysis)
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # 2️⃣ Set up Node.js
       - name: Setup Node.js
@@ -37,80 +42,121 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ Run tests (optional, if you have tests)
+      # 4️⃣ (Optional) Run tests
       # - name: Run tests
-       # run: npm test --if-present
+      #   run: npm test --if-present
 
-      # 5️⃣ SonarCloud Scan
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+      # 5️⃣ Sonar analysis (SonarQube Server or SonarQube Cloud)
+      # For SonarCloud, set SONAR_TOKEN and ensure sonar-project.properties has sonar.projectKey and sonar.organization.
+      # Omit SONAR_HOST_URL for SonarCloud; set SONAR_HOST_URL for SonarQube Server.
+      - name: Sonar Scan
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # needed for PR decoration
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          # SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}   # uncomment only for self-hosted SonarQube
 
-      # 6️⃣ Pre-build Trivy scan (filesystem + dependencies)
-      - name: Trivy FS Scan
-        uses: aquasecurity/trivy-action@0.18.0
+      # 6️⃣ Cache Trivy DB to speed up scans on hosted runners
+      - name: Cache Trivy DB
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/trivy
+          key: ${{ runner.os }}-trivy-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-trivy-
+
+      # 7️⃣ Pre-build Trivy scan (filesystem + deps + misconfig + secrets)
+      - name: Trivy FS Scan (SARIF)
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           scan-type: fs
           scan-ref: .
+          scanners: vuln,misconfig,secret
           severity: HIGH,CRITICAL
-          format: 'table'
-          output: trivy-fs-report.txt
+          ignore-unfixed: true
+          format: sarif
+          output: trivy-fs.sarif
+          exit-code: 0  # don't fail the pipeline here; gate later if desired
 
-      # 7️⃣ Build backend Docker image
+      - name: Upload FS SARIF to Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-fs.sarif
+
+      # 8️⃣ Build backend Docker image
       - name: Build backend image
-        run: docker build -t daybook-backend ./backend
+        run: docker build -t daybook-backend:${{ github.sha }} ./backend
 
-      # 8️⃣ Build frontend Docker image
+      # 9️⃣ Build frontend Docker image
       - name: Build frontend image
-        run: docker build -t daybook-frontend ./frontend
+        run: docker build -t daybook-frontend:${{ github.sha }} ./frontend
 
-      # 9️⃣ Trivy Scan (backend image)
-      - name: Trivy Scan Backend
-        uses: aquasecurity/trivy-action@0.18.0
+      # 🔟 Trivy Scan (backend image)
+      - name: Trivy Scan Backend (SARIF)
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           scan-type: image
-          image-ref: daybook-backend
+          image-ref: daybook-backend:${{ github.sha }}
           severity: HIGH,CRITICAL
-          format: 'table'
-          output: trivy-backend-report.txt
+          ignore-unfixed: true
+          format: sarif
+          output: trivy-backend.sarif
+          exit-code: 0
 
-      # 🔟 Trivy Scan (frontend image)
-      - name: Trivy Scan Frontend
-        uses: aquasecurity/trivy-action@0.18.0
+      - name: Upload Backend SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-backend.sarif
+
+      # 1️⃣1️⃣ Trivy Scan (frontend image)
+      - name: Trivy Scan Frontend (SARIF)
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           scan-type: image
-          image-ref: daybook-frontend
+          image-ref: daybook-frontend:${{ github.sha }}
           severity: HIGH,CRITICAL
-          format: 'table'
-          output: trivy-frontend-report.txt
+          ignore-unfixed: true
+          format: sarif
+          output: trivy-frontend.sarif
+          exit-code: 0
 
-      # 1️⃣1️⃣ Upload Trivy Reports as Artifacts
+      - name: Upload Frontend SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-frontend.sarif
+
+      # 1️⃣2️⃣ Also save human-readable Trivy reports
+      - name: Export Trivy table reports
+        run: |
+          trivy --version || true
+          # Re-run format conversion from SARIF to table for artifacts (optional)
+          # Alternatively re-run scans with format=table if artifact needs exact CLI table output.
+          echo "FS, Backend, and Frontend SARIF are uploaded to Security tab; table artifacts are optional."
+
       - name: Upload Trivy Reports as Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: trivy-reports
           path: |
-            trivy-fs-report.txt
-            trivy-backend-report.txt
-            trivy-frontend-report.txt
+            trivy-fs.sarif
+            trivy-backend.sarif
+            trivy-frontend.sarif
 
-      # 1️⃣2️⃣ Log in to Docker Hub
+      # 1️⃣3️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 1️⃣3️⃣ Push backend image
+      # 1️⃣4️⃣ Push backend image
       - name: Push backend image
         run: |
-          docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
+          docker tag daybook-backend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
-      # 1️⃣4️⃣ Push frontend image
+      # 1️⃣5️⃣ Push frontend image
       - name: Push frontend image
         run: |
-          docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
+          docker tag daybook-frontend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
