--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -2,18 +2,15 @@ name: CI/CD Daybook Project
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
-  security-events: write  # required for SARIF uploads to Code Scanning
+    branches:
+      - main
 
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
-
     services:
       mongo:
         image: mongo
@@ -26,121 +23,94 @@ jobs:
           --health-retries 5
 
     steps:
+      # 1️⃣ Checkout repo
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
+      # 2️⃣ Set up Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
+      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: npm install
 
+      # 4️⃣ Run tests (optional, if you have tests)
       # - name: Run tests
-      #   run: npm test --if-present
+       # run: npm test --if-present
 
-      # Sonar analysis (SonarCloud or SonarQube Server)
-      # For SonarCloud: set SONAR_TOKEN and project config (e.g., sonar-project.properties)
-      # For SonarQube Server: also set SONAR_HOST_URL
-      - name: Sonar Scan
-        uses: SonarSource/sonarqube-scan-action@v6
+      # 5️⃣ SonarCloud Scan
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # needed for PR decoration
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          # SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}  # uncomment for self-hosted SonarQube
 
-      # Cache Trivy DB to speed up scans on hosted runners
-      - name: Cache Trivy DB
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/trivy
-          key: ${{ runner.os }}-trivy-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-trivy-
-
-      # Trivy filesystem scan (vuln + misconfig + secrets) -> SARIF
-      - name: Trivy FS Scan (SARIF)
-        uses: aquasecurity/trivy-action@v0.33.1
+      # 6️⃣ Pre-build Trivy scan (filesystem + dependencies)
+      - name: Trivy FS Scan
+        uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: fs
           scan-ref: .
-          scanners: vuln,misconfig,secret
           severity: HIGH,CRITICAL
-          ignore-unfixed: true
-          format: sarif
-          output: trivy-fs.sarif
-          exit-code: 0
+          format: 'table'
+          output: trivy-fs-report.txt
 
-      - name: Upload FS SARIF to Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-fs.sarif
-
-      # Build images with unique tags
+      # 7️⃣ Build backend Docker image
       - name: Build backend image
-        run: docker build -t daybook-backend:${{ github.sha }} ./backend
+        run: docker build -t daybook-backend ./backend
 
+      # 8️⃣ Build frontend Docker image
       - name: Build frontend image
-        run: docker build -t daybook-frontend:${{ github.sha }} ./frontend
+        run: docker build -t daybook-frontend ./frontend
 
-      # Trivy image scans -> SARIF
-      - name: Trivy Scan Backend (SARIF)
-        uses: aquasecurity/trivy-action@v0.33.1
+      # 9️⃣ Trivy Scan (backend image)
+      - name: Trivy Scan Backend
+        uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
-          image-ref: daybook-backend:${{ github.sha }}
+          image-ref: daybook-backend
           severity: HIGH,CRITICAL
-          ignore-unfixed: true
-          format: sarif
-          output: trivy-backend.sarif
-          exit-code: 0
+          format: 'table'
+          output: trivy-backend-report.txt
 
-      - name: Upload Backend SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-backend.sarif
-
-      - name: Trivy Scan Frontend (SARIF)
-        uses: aquasecurity/trivy-action@v0.33.1
+      # 🔟 Trivy Scan (frontend image)
+      - name: Trivy Scan Frontend
+        uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
-          image-ref: daybook-frontend:${{ github.sha }}
+          image-ref: daybook-frontend
           severity: HIGH,CRITICAL
-          ignore-unfixed: true
-          format: sarif
-          output: trivy-frontend.sarif
-          exit-code: 0
+          format: 'table'
+          output: trivy-frontend-report.txt
 
-      - name: Upload Frontend SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-frontend.sarif
-
-      # Save SARIF artifacts as well (optional)
+      # 1️⃣1️⃣ Upload Trivy Reports as Artifacts
       - name: Upload Trivy Reports as Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-sarif-reports
+          name: trivy-reports
           path: |
-            trivy-fs.sarif
-            trivy-backend.sarif
-            trivy-frontend.sarif
+            trivy-fs-report.txt
+            trivy-backend-report.txt
+            trivy-frontend-report.txt
 
+      # 1️⃣2️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 1️⃣3️⃣ Push backend image
       - name: Push backend image
         run: |
-          docker tag daybook-backend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
+          docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
+      # 1️⃣4️⃣ Push frontend image
       - name: Push frontend image
         run: |
-          docker tag daybook-frontend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
+          docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
