--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,28 +28,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
+      # 2️⃣ Setup Node.js (needed for Sonar + Trivy FS scans)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm install
+      # (Removed old npm install step - not needed at root)
 
-      # 4️⃣ Run tests (optional, uncomment if you have tests)
-      # - name: Run tests
-      #   run: npm test --if-present
-
-      # 5️⃣ SonarCloud Scan
+      # 3️⃣ SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # Required for PR decoration
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # 6️⃣ Pre-build Trivy scan (filesystem + dependencies)
+      # 4️⃣ Pre-build Trivy scan (filesystem + dependencies)
       - name: Trivy FS Scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -59,15 +53,15 @@ jobs:
           format: table
           output: trivy-fs-report.txt
 
-      # 7️⃣ Build backend Docker image
+      # 5️⃣ Build backend Docker image
       - name: Build backend image
         run: docker build -t daybook-backend ./backend
 
-      # 8️⃣ Build frontend Docker image
+      # 6️⃣ Build frontend Docker image
       - name: Build frontend image
         run: docker build -t daybook-frontend ./frontend
 
-      # 9️⃣ Trivy Scan (backend image)
+      # 7️⃣ Trivy Scan (backend image)
       - name: Trivy Scan Backend
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -77,7 +71,7 @@ jobs:
           format: table
           output: trivy-backend-report.txt
 
-      # 🔟 Trivy Scan (frontend image)
+      # 8️⃣ Trivy Scan (frontend image)
       - name: Trivy Scan Frontend
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -87,7 +81,7 @@ jobs:
           format: table
           output: trivy-frontend-report.txt
 
-      # 1️⃣1️⃣ Upload Trivy Reports as Artifacts
+      # 9️⃣ Upload Trivy Reports as Artifacts
       - name: Upload Trivy Reports as Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -97,20 +91,20 @@ jobs:
             trivy-backend-report.txt
             trivy-frontend-report.txt
 
-      # 1️⃣2️⃣ Log in to Docker Hub
+      # 🔟 Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 1️⃣3️⃣ Push backend image
+      # 1️⃣1️⃣ Push backend image
       - name: Push backend image
         run: |
           docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
 
-      # 1️⃣4️⃣ Push frontend image
+      # 1️⃣2️⃣ Push frontend image
       - name: Push frontend image
         run: |
           docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
