--- a/K8s/backend/deployment.yml
+++ b/K8s/backend/deployment.yml
@@ -1,1 +1,35 @@
-
+# backend-deployment.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: daybook-backend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: daybook-backend
+  template:
+    metadata:
+      labels:
+        app: daybook-backend
+    spec:
+      containers:
+        - name: backend
+          image: 0x1luffy/daybook-backend
+          ports:
+            - containerPort: 5000
+          env:
+            - name: MONGO_URI
+              value: "mongodb://admin:password@mongo-service:27017"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+spec:
+  selector:
+    app: daybook-backend
+  ports:
+    - port: 5000
+      targetPort: 5000
+  type: NodePort
