--- a/K8s/secrets.yml
+++ b/K8s/secrets.yml
@@ -1,1 +1,10 @@
-
+# daybook-secret.yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: daybook-secret
+type: Opaque
+stringData:
+  MONGO_USERNAME: "admin"
+  MONGO_PASSWORD: "password"
+  JWT_SECRET: "supersecretjwtkey"
