--- a/K8s/frontend/deployment.yml
+++ b/K8s/frontend/deployment.yml
@@ -18,15 +18,14 @@ spec:
           image: 0x1luffy/daybook-frontend
           ports:
             - containerPort: 3000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-spec:
-  selector:
-    app: daybook-frontend
-  ports:
-    - port: 3000
-      targetPort: 3000
-  type: NodePort
+          env:
+            - name: NODE_ENV
+              valueFrom:
+                configMapKeyRef:
+                  name: daybook-config
+                  key: NODE_ENV
+            - name: API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: daybook-config
+                  key: BACKEND_PORT
