--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,26 +28,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js (needed for Sonar + Trivy FS scans)
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
-      # (Removed old npm install step - not needed at root)
-
       # 3️⃣ SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # Required for PR decoration
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-         args: >
-           -Dsonar.projectKey=0x1Luffy_Daybook-DevOps
-           -Dsonar.organization=0x1luffy
+          args: >
+            -Dsonar.projectKey=0x1Luffy_Daybook-DevOps
+            -Dsonar.organization=0x1luffy
 
-      # 4️⃣ Pre-build Trivy scan (filesystem + dependencies)
+      # 4️⃣ Pre-build Trivy scan
       - name: Trivy FS Scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
@@ -85,8 +83,8 @@ jobs:
           format: table
           output: trivy-frontend-report.txt
 
-      # 9️⃣ Upload Trivy Reports as Artifacts
-      - name: Upload Trivy Reports as Artifacts
+      # 9️⃣ Upload Trivy Reports
+      - name: Upload Trivy Reports
         uses: actions/upload-artifact@v4
         with:
           name: trivy-reports
@@ -102,14 +100,34 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 1️⃣1️⃣ Push backend image
+      # 1️⃣1️⃣ Push backend image with commit SHA tag
       - name: Push backend image
         run: |
-          docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:latest
+          IMAGE_TAG=${{ github.sha }}
+          docker tag daybook-backend ${{ secrets.DOCKER_USERNAME }}/daybook-backend:$IMAGE_TAG
+          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-backend:$IMAGE_TAG
 
-      # 1️⃣2️⃣ Push frontend image
+      # 1️⃣2️⃣ Push frontend image with commit SHA tag
       - name: Push frontend image
         run: |
-          docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:latest
+          IMAGE_TAG=${{ github.sha }}
+          docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:$IMAGE_TAG
+          docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:$IMAGE_TAG
+
+      # 1️⃣3️⃣ Update K8s manifests with new image tags
+      - name: Update Kubernetes Manifests
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          sed -i "s|image: .*/daybook-frontend.*|image: ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:$IMAGE_TAG|" ./K8s/frontend/frontend-deployment.yml
+          sed -i "s|image: .*/daybook-backend.*|image: ${{ secrets.DOCKER_USERNAME }}/daybook-backend:$IMAGE_TAG|" ./K8s/backend/backend-deployment.yml
+
+      # 1️⃣4️⃣ Commit and push manifest changes
+      - name: Commit manifest updates
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add ./k8s/frontend-deployment.yml ./k8s/backend-deployment.yml
+          git commit -m "Update K8s manifests with image tag ${{ github.sha }}" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.DAYBOOK_GITHUB_TOKEN }}
