--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -126,7 +126,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./k8s/frontend-deployment.yml ./k8s/backend-deployment.yml
+          git add ./K8s/frontend/deployment.yml ./K8s/backend/deployment.yml
           git commit -m "Update K8s manifests with image tag ${{ github.sha }}" || echo "No changes to commit"
           git push
         env:
