--- a/K8s/backend/deployment.yml
+++ b/K8s/backend/deployment.yml
@@ -1,4 +1,3 @@
-# backend-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,20 +13,35 @@ spec:
         app: daybook-backend
     spec:
       containers:
-        - name: backend
-          image: 0x1luffy/daybook-backend:fe6c8703bcd8ef6cedb34125d84136b9f141f43b
-          ports:
-            - containerPort: 5000
-          env:
-            - name: MONGO_URI
-              value: "mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@$(MONGO_HOST):27017/$(MONGO_DB)"
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: daybook-secret
-                  key: JWT_SECRET
-            - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: daybook-config
-                  key: NODE_ENV
+      - name: backend
+        image: 0x1luffy/daybook-backend
+        ports:
+        - containerPort: 5000
+        env:
+        - name: MONGO_URI
+          valueFrom:
+            secretKeyRef:
+              name: daybook-secret
+              key: MONGO_URI
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: daybook-secret
+              key: JWT_SECRET
+        - name: NODE_ENV
+          valueFrom:
+            configMapKeyRef:
+              name: daybook-config
+              key: NODE_ENV
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: daybook-backend-service
+spec:
+  selector:
+    app: daybook-backend
+  ports:
+  - port: 5000
+    targetPort: 5000
+  type: ClusterIP
