--- a/K8s/frontend/deployment.yml
+++ b/K8s/frontend/deployment.yml
@@ -1,4 +1,3 @@
-# frontend-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,18 +13,27 @@ spec:
         app: daybook-frontend
     spec:
       containers:
-        - name: frontend
-          image: 0x1luffy/daybook-frontend:fe6c8703bcd8ef6cedb34125d84136b9f141f43b
-          ports:
-            - containerPort: 3000
-          env:
-            - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: daybook-config
-                  key: NODE_ENV
-            - name: API_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: daybook-config
-                  key: BACKEND_PORT
+      - name: frontend
+        image: 0x1luffy/daybook-frontend
+        ports:
+        - containerPort: 3000
+        env:
+        - name: NODE_ENV
+          valueFrom:
+            configMapKeyRef:
+              name: daybook-config
+              key: NODE_ENV
+        - name: API_URL
+          value: "http://daybook-backend-service:5000"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: daybook-frontend-service
+spec:
+  selector:
+    app: daybook-frontend
+  ports:
+  - port: 3000
+    targetPort: 3000
+  type: NodePort
