--- a/K8s/mongo/deployment.yml
+++ b/K8s/mongo/deployment.yml
@@ -1,4 +1,3 @@
-# mongo-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,21 +13,15 @@ spec:
         app: mongo
     spec:
       containers:
-        - name: mongo
-          image: mongo
-          ports:
-            - containerPort: 27017
-          env:
-            - name: MONGO_INITDB_ROOT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: daybook-secret
-                  key: MONGO_USERNAME
-            - name: MONGO_INITDB_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: daybook-secret
-                  key: MONGO_PASSWORD
+      - name: mongo
+        image: mongo
+        ports:
+        - containerPort: 27017
+        env:
+        - name: MONGO_INITDB_ROOT_USERNAME
+          value: "admin"
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          value: "password"
 ---
 apiVersion: v1
 kind: Service
@@ -38,7 +31,6 @@ spec:
   selector:
     app: mongo
   ports:
-    - port: 27017
-      targetPort: 27017
+  - port: 27017
+    targetPort: 27017
   type: ClusterIP
-
